--- a/languages/auto_teaser-de_DE.po
+++ b/languages/auto_teaser-de_DE.po
@@ -1,227 +1,231 @@
+# 
+# Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: Auto Teaser\n"
-"POT-Creation-Date: 2014-10-02 23:49+0700\n"
-"PO-Revision-Date: 2014-10-02 23:49+0700\n"
-"Last-Translator: Kolja Nolte <kolja.nolte@gmail.com>\n"
-"Language-Team: Kolja Nolte <kolja.nolte@gmail.com>\n"
-"Language: en\n"
+"POT-Creation-Date: 2014-10-01 22:56+0700\n"
+"PO-Revision-Date: 2014-10-02 16:50+0000\n"
+"Last-Translator: Kolja Nolte <puhbaer3@gmail.com>\n"
+"Language-Team: German (Germany) (http://www.transifex.com/projects/p/auto-teaser/language/de_DE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de_DE\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.6.9\n"
 "X-Poedit-Basepath: .\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: ..\n"
 
 #: ../includes/hooks.php:30 ../includes/settings.php:23
 msgid "Auto Teaser settings"
-msgstr ""
+msgstr "Auto-Teaser-Einstellungen"
 
 #: ../includes/hooks.php:30
 msgid "Auto Teaser"
-msgstr ""
+msgstr "Auto Teaser"
 
 #: ../includes/settings.php:27
 msgid "Settings saved."
-msgstr ""
+msgstr "Die Einstellungen wurden gespeichert."
 
 #: ../includes/settings.php:33
 msgid "Teaser format"
-msgstr ""
+msgstr "Teaser-Format"
 
 #: ../includes/settings.php:36
 #, php-format
 msgid "%s characters"
-msgstr ""
+msgstr "%s Zeichen"
 
 #: ../includes/settings.php:38
 msgid ""
-"Defines the way the teaser is being displayed. <strong>HTML allowed</strong>."
-msgstr ""
+"Defines the way the teaser is being displayed. <strong>HTML "
+"allowed</strong>."
+msgstr "Legt fest, wie der Teaser dargestellt werden sol. <strong>HTML wird unterstützt</strong>."
 
 #: ../includes/settings.php:41
 msgid "Show preview"
-msgstr ""
+msgstr "Vorschau einblenden"
 
 #: ../includes/settings.php:42
 msgid "Hide preview"
-msgstr ""
+msgstr "Vorschau ausblenden"
 
 #: ../includes/settings.php:44
 msgid "Show placeholders"
-msgstr ""
+msgstr "Platzhalter einblenden"
 
 #: ../includes/settings.php:45
 msgid "Hide placeholders"
-msgstr ""
+msgstr "Platzhalter ausblenden"
 
 #: ../includes/settings.php:56
 msgid "Administrator"
-msgstr ""
+msgstr "Administrator"
 
 #: ../includes/settings.php:60
 msgid "Travel reports"
-msgstr ""
+msgstr "Reiseberichte"
 
 #: ../includes/settings.php:61
 msgid "Blog"
-msgstr ""
+msgstr "Blog"
 
 #: ../includes/settings.php:62
 msgid "All posts"
-msgstr ""
+msgstr "Alle Beiträge"
 
 #: ../includes/settings.php:106
 msgid "The generated teaser."
-msgstr ""
+msgstr "Der generierte Teaser."
 
 #: ../includes/settings.php:113
 msgid "Post's excerpt."
-msgstr ""
+msgstr "Beitragsauszug"
 
 #: ../includes/settings.php:120
 msgid "Permalink (URL) to the current post."
-msgstr ""
+msgstr "Permalink (URL) zum Beitrag."
 
 #: ../includes/settings.php:129
 msgid "Author of the post"
-msgstr ""
+msgstr "Autor des Beitrags."
 
 #: ../includes/settings.php:136
 msgid "The total number of comments."
-msgstr ""
+msgstr "Die Gesamtzahl der Kommentare des Beitrags."
 
 #: ../includes/settings.php:143
 msgid "Post's categories separated with commas."
-msgstr ""
+msgstr "Beitrags-Kategorien getrennt mit Kommata."
 
 #: ../includes/settings.php:154
 msgid "First found category post is saved in."
-msgstr ""
+msgstr "Die erste gefundene Kategorie, in die der Beitrag abgelegt wurde."
 
 #: ../includes/settings.php:161
 msgid "Teaser split style"
-msgstr ""
+msgstr "Teaser-Trennung"
 
 #: ../includes/settings.php:166
 msgid "Paragraphs"
-msgstr ""
+msgstr "Absätze"
 
 #: ../includes/settings.php:167
 msgid "Sentences"
-msgstr ""
+msgstr "Sätze"
 
 #: ../includes/settings.php:168
 msgid "Words"
-msgstr ""
+msgstr "Wörter"
 
 #: ../includes/settings.php:169
 msgid "Characters"
-msgstr ""
+msgstr "Zeichen"
 
 #: ../includes/settings.php:170
 msgid "Custom"
-msgstr ""
+msgstr "Benutzerdefiniert"
 
 #: ../includes/settings.php:181
 msgid "How should Auto Teaser split the teaser?"
-msgstr ""
+msgstr "Wie soll Auto Teaser den Teaser trennen?"
 
 #: ../includes/settings.php:186
 msgid "before"
-msgstr ""
+msgstr "vor"
 
 #: ../includes/settings.php:186
 msgid "after"
-msgstr ""
+msgstr "nach"
 
 #: ../includes/settings.php:188
 #, php-format
 msgid "Split %s finding"
-msgstr ""
+msgstr "Teaser %s dem folgendem String trennen"
 
 #: ../includes/settings.php:192 ../includes/settings.php:236
 msgid "Show"
-msgstr ""
+msgstr "Einblenden"
 
 #: ../includes/settings.php:199
 msgid "Replace default excerpt"
-msgstr ""
+msgstr "Standard-Auszug ersetzen"
 
 #: ../includes/settings.php:203 ../includes/settings.php:213
 msgid "Yes"
-msgstr ""
+msgstr "Ja"
 
 #: ../includes/settings.php:205 ../includes/settings.php:216
 msgid "No"
-msgstr ""
+msgstr "Nein"
 
 #: ../includes/settings.php:206
 msgid ""
-"Displays the auto teaser wherever WordPress' native <code>the_excerpt()</"
-"code> or <code>get_the_excerpt()</code> is being called."
-msgstr ""
+"Displays the auto teaser wherever WordPress' native "
+"<code>the_excerpt()</code> or <code>get_the_excerpt()</code> is being "
+"called."
+msgstr "Zeigt den generierten teaser an, wann immer WordPress' Funktionen <code>the_excerpt()</code> oder <code>get_the_excerpt()</code> aufgerufen werden."
 
 #: ../includes/settings.php:210
 msgid "Allow HTML"
-msgstr ""
+msgstr "HTML erlauben"
 
 #: ../includes/settings.php:219
 msgid "Only allowed tags"
-msgstr ""
+msgstr "Nur ausgewählte Tags"
 
 #: ../includes/settings.php:222
 msgid "E.g.: p, div, br"
-msgstr ""
+msgstr "Z.B.: p, div, br"
 
 #: ../includes/settings.php:223
 msgid ""
 "Defines whether HTML is allowed inside the teaser or not. Separate allowed "
 "tags with commas."
-msgstr ""
+msgstr "Legt fest, ob HTML im Teaser erlaubt sein sollen oder nicht. Trenne mehrere Tags mit Kommata."
 
 #: ../includes/settings.php:227
 msgid "Exclude post IDs"
-msgstr ""
+msgstr "Post IDs ausschließen"
 
 #: ../includes/settings.php:229
 msgid "E.g.: 13, 84, 194"
-msgstr ""
+msgstr "E.g.: 13, 84, 194"
 
 #: ../includes/settings.php:230
 msgid "Post IDs Auto Teaser will ignore. Separate multiple IDs with commas."
-msgstr ""
+msgstr "IDs der Beiträge, für die Auto Teaser keinen Teaser generieren soll."
 
 #: ../includes/settings.php:234
 msgid "Backup teaser"
-msgstr ""
+msgstr "Backup-Teaser"
 
 #: ../includes/settings.php:238
 msgid "full post content"
-msgstr ""
+msgstr "kompletten Beitragsinhalt"
 
 #: ../includes/settings.php:239
 msgid "post excerpt"
-msgstr ""
+msgstr "Beitragsauszug"
 
 #: ../includes/settings.php:240
 msgid "custom text"
-msgstr ""
+msgstr "benutzerdefinierter Text"
 
 #: ../includes/settings.php:241
 msgid "nothing"
-msgstr ""
+msgstr "nichts"
 
 #: ../includes/settings.php:245
 msgid "Enter your custom text..."
-msgstr ""
+msgstr "Benutzerdefinierten Text eingeben..."
 
 #: ../includes/settings.php:248
 msgid "What to display in case the auto teaser could not be generated."
-msgstr ""
+msgstr "Was dargestellt werden soll, wenn Auto Teaser keinen Teaser generieren kann."
 
 #: ../includes/settings.php:253
 msgid "Save changes"
-msgstr ""
+msgstr "Änderungen speichern"
