--- a/languages/auto_teaser-fr_FR.po
+++ b/languages/auto_teaser-fr_FR.po
@@ -1,65 +1,69 @@
+# 
+# Translators:
+# FxB <fxb@wp-translations.org>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Auto Teaser\n"
-"POT-Creation-Date: 2014-10-02 23:49+0700\n"
-"PO-Revision-Date: 2014-10-02 23:49+0700\n"
-"Last-Translator: Kolja Nolte <kolja.nolte@gmail.com>\n"
-"Language-Team: Kolja Nolte <kolja.nolte@gmail.com>\n"
-"Language: en\n"
+"POT-Creation-Date: 2014-10-01 22:56+0700\n"
+"PO-Revision-Date: 2014-10-02 16:50+0000\n"
+"Last-Translator: FxB <fxb@wp-translations.org>\n"
+"Language-Team: French (France) (http://www.transifex.com/projects/p/auto-teaser/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr_FR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 1.6.9\n"
 "X-Poedit-Basepath: .\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: ..\n"
 
 #: ../includes/hooks.php:30 ../includes/settings.php:23
 msgid "Auto Teaser settings"
-msgstr ""
+msgstr "Réglages d'Auto Teaser"
 
 #: ../includes/hooks.php:30
 msgid "Auto Teaser"
-msgstr ""
+msgstr "Auto Teaser"
 
 #: ../includes/settings.php:27
 msgid "Settings saved."
-msgstr ""
+msgstr "Réglages enregistrés."
 
 #: ../includes/settings.php:33
 msgid "Teaser format"
-msgstr ""
+msgstr "Format du teaser"
 
 #: ../includes/settings.php:36
 #, php-format
 msgid "%s characters"
-msgstr ""
+msgstr "%s caract&egrave;res"
 
 #: ../includes/settings.php:38
 msgid ""
-"Defines the way the teaser is being displayed. <strong>HTML allowed</strong>."
+"Defines the way the teaser is being displayed. <strong>HTML "
+"allowed</strong>."
 msgstr ""
 
 #: ../includes/settings.php:41
 msgid "Show preview"
-msgstr ""
+msgstr "Afficher l'aperçu"
 
 #: ../includes/settings.php:42
 msgid "Hide preview"
-msgstr ""
+msgstr "Masquer l'aperçu"
 
 #: ../includes/settings.php:44
 msgid "Show placeholders"
-msgstr ""
+msgstr "Afficher les emplacements"
 
 #: ../includes/settings.php:45
 msgid "Hide placeholders"
-msgstr ""
+msgstr "Masquer les emplacements"
 
 #: ../includes/settings.php:56
 msgid "Administrator"
-msgstr ""
+msgstr "Administrateur"
 
 #: ../includes/settings.php:60
 msgid "Travel reports"
@@ -67,11 +71,11 @@ msgstr ""
 
 #: ../includes/settings.php:61
 msgid "Blog"
-msgstr ""
+msgstr "Blog"
 
 #: ../includes/settings.php:62
 msgid "All posts"
-msgstr ""
+msgstr "Tous les articles"
 
 #: ../includes/settings.php:106
 msgid "The generated teaser."
@@ -79,7 +83,7 @@ msgstr ""
 
 #: ../includes/settings.php:113
 msgid "Post's excerpt."
-msgstr ""
+msgstr "L'extrait de l'article."
 
 #: ../includes/settings.php:120
 msgid "Permalink (URL) to the current post."
@@ -87,11 +91,11 @@ msgstr ""
 
 #: ../includes/settings.php:129
 msgid "Author of the post"
-msgstr ""
+msgstr "Auteur de l'article"
 
 #: ../includes/settings.php:136
 msgid "The total number of comments."
-msgstr ""
+msgstr "Le nombre total de commentaires."
 
 #: ../includes/settings.php:143
 msgid "Post's categories separated with commas."
@@ -107,35 +111,35 @@ msgstr ""
 
 #: ../includes/settings.php:166
 msgid "Paragraphs"
-msgstr ""
+msgstr "Paragraphes"
 
 #: ../includes/settings.php:167
 msgid "Sentences"
-msgstr ""
+msgstr "Phrases"
 
 #: ../includes/settings.php:168
 msgid "Words"
-msgstr ""
+msgstr "Mots"
 
 #: ../includes/settings.php:169
 msgid "Characters"
-msgstr ""
+msgstr "Caract&egrave;res"
 
 #: ../includes/settings.php:170
 msgid "Custom"
-msgstr ""
+msgstr "Personnalisé"
 
 #: ../includes/settings.php:181
 msgid "How should Auto Teaser split the teaser?"
-msgstr ""
+msgstr "Comment Auto Teaser doit diviser le teaser ?"
 
 #: ../includes/settings.php:186
 msgid "before"
-msgstr ""
+msgstr "Avant"
 
 #: ../includes/settings.php:186
 msgid "after"
-msgstr ""
+msgstr "Après"
 
 #: ../includes/settings.php:188
 #, php-format
@@ -144,29 +148,30 @@ msgstr ""
 
 #: ../includes/settings.php:192 ../includes/settings.php:236
 msgid "Show"
-msgstr ""
+msgstr "Afficher"
 
 #: ../includes/settings.php:199
 msgid "Replace default excerpt"
-msgstr ""
+msgstr "Remplacer l'extrait par défaut"
 
 #: ../includes/settings.php:203 ../includes/settings.php:213
 msgid "Yes"
-msgstr ""
+msgstr "Oui"
 
 #: ../includes/settings.php:205 ../includes/settings.php:216
 msgid "No"
-msgstr ""
+msgstr "Non"
 
 #: ../includes/settings.php:206
 msgid ""
-"Displays the auto teaser wherever WordPress' native <code>the_excerpt()</"
-"code> or <code>get_the_excerpt()</code> is being called."
+"Displays the auto teaser wherever WordPress' native "
+"<code>the_excerpt()</code> or <code>get_the_excerpt()</code> is being "
+"called."
 msgstr ""
 
 #: ../includes/settings.php:210
 msgid "Allow HTML"
-msgstr ""
+msgstr "Autoriser l'HTML"
 
 #: ../includes/settings.php:219
 msgid "Only allowed tags"
@@ -174,7 +179,7 @@ msgstr ""
 
 #: ../includes/settings.php:222
 msgid "E.g.: p, div, br"
-msgstr ""
+msgstr "P.ex. p, div, br"
 
 #: ../includes/settings.php:223
 msgid ""
@@ -188,7 +193,7 @@ msgstr ""
 
 #: ../includes/settings.php:229
 msgid "E.g.: 13, 84, 194"
-msgstr ""
+msgstr "P.ex. 13, 84, 194"
 
 #: ../includes/settings.php:230
 msgid "Post IDs Auto Teaser will ignore. Separate multiple IDs with commas."
@@ -204,19 +209,19 @@ msgstr ""
 
 #: ../includes/settings.php:239
 msgid "post excerpt"
-msgstr ""
+msgstr "Extrait de l'article"
 
 #: ../includes/settings.php:240
 msgid "custom text"
-msgstr ""
+msgstr "Texte personnalisé"
 
 #: ../includes/settings.php:241
 msgid "nothing"
-msgstr ""
+msgstr "Rien"
 
 #: ../includes/settings.php:245
 msgid "Enter your custom text..."
-msgstr ""
+msgstr "Saisissez votre texte personnalisé..."
 
 #: ../includes/settings.php:248
 msgid "What to display in case the auto teaser could not be generated."
@@ -224,4 +229,4 @@ msgstr ""
 
 #: ../includes/settings.php:253
 msgid "Save changes"
-msgstr ""
+msgstr "Enregistrer les modifications"
